<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">GPS Basic</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_longitude">Longitude</string>
    <string name="label_altitude">Altitude</string>
    <string name="label_zero">0.0</string>
    <string name="toast_update">Position Updated</string>
    <string name="toast_disable">GPS is Disabled</string>
    <string name="toast_enable">GPS is Enabled</string>
    <string name="button_gps_on">Turn GPS On</string>
    <string name="button_gps_off">Turn GPS Off</string>
    <string name="label_num_sat">Nº Satellites</string>
    <string name="label_bearing">Bearing</string>
    <string name="label_speed">Speed</string>
    <string name="label_accuracy">Accuracy</string>
    <string name="label_not_aval">Not Available</string>
    <string name="label_name">Provider</string>
    <string name="label_status">Status</string>
</resources>
